Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Account_ActiveContacts__c.field-meta.xml
<CustomField>
    <fullName>Account_ActiveContacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Active Contacts)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>