Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Audience_Report_Dashboard_Access_Contact__c.field-meta.xml
<CustomField>
    <fullName>Audience_Report_Dashboard_Access_Contact__c</fullName>
    <inlineHelpText>Please mark as &apos;Yes&apos; if access to Audience Report Dashboard has been granted</inlineHelpText>
    <label>Audience Report Dashboard Access? Con</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>