Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Audience_Report_Support__c.field-meta.xml
<CustomField>
    <fullName>Audience_Report_Support__c</fullName>
    <label>Audience Report Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I would like to speak to someone at Eyeota</fullName>
            </value>
            <value>
                <fullName>I can&apos;t find the segment I&apos;m looking for</fullName>
            </value>
            <value>
                <fullName>I need help finding relevant segments for my campaign</fullName>
            </value>
            <value>
                <fullName>I can&apos;t find segments for the country I am looking for</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>