Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Campaign_Tags__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Tags__c</fullName>
    <inlineHelpText>Select relevant campaign/s</inlineHelpText>
    <label>Campaign Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campaign_Tags</valueSetName>
    </valueSet>
</CustomField>