Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Consent_Blog_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Consent_Blog_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent (Blog Notifications)</label>
    <type>Checkbox</type>
</CustomField>