Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branded Data Partner</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Competitor (no emails)</fullName>
            </value>
            <value>
                <fullName>Ad Network</fullName>
            </value>
            <value>
                <fullName>Ad Server</fullName>
            </value>
            <value>
                <fullName>Advertiser</fullName>
            </value>
            <value>
                <fullName>Data Supplier</fullName>
            </value>
            <value>
                <fullName>Data Buyer</fullName>
            </value>
            <value>
                <fullName>Data Partner</fullName>
            </value>
            <value>
                <fullName>DMP/Data Specialist</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>Media Agency</fullName>
            </value>
            <value>
                <fullName>Trading Desk</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
            <value>
                <fullName>Advisory Board Member</fullName>
            </value>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
            <value>
                <fullName>Competitor Investor</fullName>
            </value>
            <value>
                <fullName>Current Investor</fullName>
            </value>
            <value>
                <fullName>Potential Investor</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>Unlisted Advisor</fullName>
            </value>
            <value>
                <fullName>Industry Association</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Event Supplier</fullName>
            </value>
            <value>
                <fullName>Marketing Supplier</fullName>
            </value>
            <value>
                <fullName>General Interest</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>