Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Conversation_History__c.field-meta.xml
<CustomField>
    <fullName>Conversation_History__c</fullName>
    <inlineHelpText>Please use only for short notes and arrange chronologically.</inlineHelpText>
    <label>Conversation History</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>