Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Countries_they_look_after__c.field-meta.xml
<CustomField>
    <fullName>Countries_they_look_after__c</fullName>
    <label>Countries they look after</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Croatia</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>Estonia</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Lithuania</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>