Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/ebsta1__Ebsta_Score_Trend_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Ebsta_Score_Trend_Last_7_Days__c</fullName>
    <label>Ebsta Score Trend Last 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>