Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/ebsta1__Last_Email_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Last_Email_Activity_Date__c</fullName>
    <label>Last Email Activity Date</label>
    <type>DateTime</type>
</CustomField>