Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/ebsta1__Last_month_emails_exchanged_outbound__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Last_month_emails_exchanged_outbound__c</fullName>
    <label>Last month emails exchanged outbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>