Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/ebsta1__Last_week_emails_exchanged_inbound__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Last_week_emails_exchanged_inbound__c</fullName>
    <label>Last week emails exchanged inbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>