Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/ebsta1__Out_of_office_until__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Out_of_office_until__c</fullName>
    <description>Ebsta out of office field.</description>
    <label>Out of office until</label>
    <type>Date</type>
</CustomField>