Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Holding_Group__c.field-meta.xml
<CustomField>
    <fullName>Holding_Group__c</fullName>
    <formula>Account.Buyer_Holding_Group_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holding Group</label>
    <type>Text</type>
</CustomField>