Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Hubspot_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_List_Name__c</fullName>
    <description>Hubspot list contact is associated with</description>
    <label>Hubspot List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>