Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Potential_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Value__c</fullName>
    <label>Potential Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HPV</fullName>
            </value>
            <value>
                <fullName>MPV</fullName>
            </value>
            <value>
                <fullName>LPV</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>