Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Regions_Looking_After__c.field-meta.xml
<CustomField>
    <fullName>Regions_Looking_After__c</fullName>
    <label>Regions (Looking After)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>MY</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>