Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Send_Billing_Report__c.field-meta.xml
<CustomField>
    <fullName>Send_Billing_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Earnings Report?</label>
    <type>Checkbox</type>
</CustomField>