Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Shareholder_Class__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Class__c</fullName>
    <label>Shareholder Class</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Voting Ordinary</fullName>
            </value>
            <value>
                <fullName>Non-voting Ordinary</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>