Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick only for C-level/Key Decision Maker contacts</inlineHelpText>
    <label>Stakeholder</label>
    <type>Checkbox</type>
</CustomField>