Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Subject_Access_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Subject_Access_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subject Access Request Submitted</label>
    <type>Checkbox</type>
</CustomField>