Sandbox/02-12-2025/force-app/main/default/objects/Contact/fields/Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability__c</fullName>
    <label>Win Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>