Sandbox/02-12-2025/force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Contact_Type__c</columns>
    <columns>Investors_e_newsletter__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Regions_Looking_After__c</columns>
    <columns>Skype__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>